FB: Fix wrapping of th following 8d51b4c6a81370aa4fe5b8408ba89fa919925d30

--- a/src/resources/forms/orbeon/builder/resources/form-builder.less
+++ b/src/resources/forms/orbeon/builder/resources/form-builder.less
@@ -462,8 +462,11 @@ body {
             th {
                 font-weight: bold;
                 text-align: right;
-                white-space: nowrap;
-                .narrow-td()
+                .narrow-td();
+
+                .xforms-output output {
+                    white-space: nowrap;            // because output by default now wraps
+                }
             }
         }
 
